"""
BUILD.bazel for @tummycrypt/tinyland-stores (Svelte variant).

Dual-mode build for packages containing .svelte.ts files (stores with runes).
Uses svelte-package instead of plain tsc.

  Standalone: cd packages/tinyland-stores && pnpm build
  Monorepo:   bazel build //packages/tinyland-stores/...
"""

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_binary")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")

# =============================================================================
# npm link - makes node_modules available for this package
# =============================================================================

npm_link_all_packages(name = "node_modules")


# =============================================================================
# Svelte package build
#
# Uses svelte-package (from @sveltejs/package) to compile .svelte.ts
# files into publishable output. Required for Svelte runes ($state, $derived).
# =============================================================================

js_run_binary(
    name = "tinyland_stores_build",
    tool = "//:svelte_package",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.svelte",
            "src/**/*.svelte.ts",
        ],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
        allow_empty = True,
    ) + [
        "package.json",
        "tsconfig.json",
        ":node_modules",
        "//packages:tsconfig_base",
    ],
    args = [
        "-i",
        "src",
        "-o",
        "dist",
    ],
    out_dirs = ["dist"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "tinyland_stores",
    srcs = [":tinyland_stores_build"],
    visibility = ["//visibility:public"],
)

# =============================================================================
# npm package target
# =============================================================================

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        "LICENSE",
        ":tinyland_stores",
    ],
    package = "@tummycrypt/tinyland-stores",
    version = "0.1.0",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Test targets
# =============================================================================

vitest_bin.vitest_test(
    name = "test",
    data = [
        ":node_modules",
        "tsconfig.json",
        "//packages:tsconfig_base",
        ":node_modules/vitest",
        "vitest.config.ts",
    ] + glob(["src/**/*.ts"]) + glob(["tests/**/*.test.ts", "tests/**/*.ts"]),
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Typecheck target
# =============================================================================

js_run_binary(
    name = "typecheck",
    tool = "//:svelte_check",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.svelte",
            "src/**/*.svelte.ts",
        ],
        allow_empty = True,
    ) + [
        "tsconfig.json",
        ":node_modules",
        "//packages:tsconfig_base",
    ],
    args = [
        "--tsconfig",
        "tsconfig.json",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Exported files for downstream consumers
# =============================================================================

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
