"""
BUILD.bazel for @tummycrypt/tinyland-stores (Svelte variant).

Dual-mode build for packages containing .svelte.ts files (stores with runes).
Uses svelte-package instead of plain tsc.

  Standalone: cd packages/tinyland-stores && pnpm build
"""

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_binary")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@tummycrypt_tinyland_stores_npm//:defs.bzl", "npm_link_all_packages")
load("@tummycrypt_tinyland_stores_npm//:vitest/package_json.bzl", vitest_bin = "bin")
load("@tummycrypt_tinyland_stores_npm//:@sveltejs/package/package_json.bzl", svelte_package = "bin")
load("@tummycrypt_tinyland_stores_npm//:svelte-check/package_json.bzl", svelte_check = "bin")

# =============================================================================
# npm link - makes node_modules available for this package
# =============================================================================

npm_link_all_packages(name = "node_modules")

# First-party dep resolved via the Bazel module graph (not npm). tinyland-composables
# is linked from its published module's :pkg target; it is removed from package.json so
# npm_link_all_packages does not also link it (TIN-1716). svelte peer is provided by this
# package's own node_modules, so there is a single svelte instance.
npm_link_package(
    name = "node_modules/@tummycrypt/tinyland-composables",
    src = "@tummycrypt_tinyland_composables//:pkg",
)

# observability/a11y.svelte.ts imports @tummycrypt/tinyland-a11y-engine/browser
npm_link_package(
    name = "node_modules/@tummycrypt/tinyland-a11y-engine",
    src = "@tummycrypt_tinyland_a11y_engine//:pkg",
)

# themeStore.svelte.ts imports getThemeCatalog from @tummycrypt/tinyvectors
npm_link_package(
    name = "node_modules/@tummycrypt/tinyvectors",
    src = "@tummycrypt_tinyvectors//:pkg",
)

svelte_package.svelte_package_binary(
    name = "svelte_package",
    visibility = ["//visibility:public"],
)

svelte_check.svelte_check_binary(
    name = "svelte_check",
    visibility = ["//visibility:public"],
)



# =============================================================================
# Svelte package build
#
# Uses svelte-package (from @sveltejs/package) to compile .svelte.ts
# files into publishable output. Required for Svelte runes ($state, $derived).
# =============================================================================

js_run_binary(
    name = "tinyland_stores_build",
    tool = "//:svelte_package",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.svelte",
            "src/**/*.svelte.ts",
        ],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
        allow_empty = True,
    ) + [
        "package.json",
        "tsconfig.json",
        ":node_modules",
        ":node_modules/@tummycrypt/tinyland-composables",
        ":node_modules/@tummycrypt/tinyland-a11y-engine",
        ":node_modules/@tummycrypt/tinyvectors",
    ],
    args = [
        "-i",
        "src",
        "-o",
        "dist",
    ],
    out_dirs = ["dist"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "tinyland_stores",
    srcs = [":tinyland_stores_build"],
    visibility = ["//visibility:public"],
)

# =============================================================================
# npm package target
# =============================================================================

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        "LICENSE",
        ":tinyland_stores",
    ],
    package = "@tummycrypt/tinyland-stores",
    version = "0.2.4",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Test targets
# =============================================================================

vitest_bin.vitest_test(
    name = "test",
    data = [
        ":node_modules",
        "tsconfig.json",
        ":node_modules/vitest",
        ":node_modules/@tummycrypt/tinyland-composables",
        ":node_modules/@tummycrypt/tinyland-a11y-engine",
        ":node_modules/@tummycrypt/tinyvectors",
        "vitest.config.ts",
    ] + glob(["src/**/*.ts"]) + glob(["tests/**/*.test.ts", "tests/**/*.ts"]),
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Typecheck target
# =============================================================================

js_run_binary(
    name = "typecheck",
    tool = "//:svelte_check",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.svelte",
            "src/**/*.svelte.ts",
        ],
        allow_empty = True,
    ) + [
        "tsconfig.json",
        ":node_modules",
        ":node_modules/@tummycrypt/tinyland-composables",
        ":node_modules/@tummycrypt/tinyland-a11y-engine",
        ":node_modules/@tummycrypt/tinyvectors",
    ],
    args = [
        "--tsconfig",
        "tsconfig.json",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Exported files for downstream consumers
# =============================================================================

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
