module(
    name = "tummycrypt_tinyland_stores",
    version = "0.3.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "2.9.1")
bazel_dep(name = "aspect_rules_ts", version = "3.8.4")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
# Inter-module dependencies (graph-linked via BUILD.bazel npm_link_package).
# 0.3.0 refactor: catalog moved to tinyvectors (getThemeCatalog) and browser a11y
# moved to tinyland-a11y-engine (/browser subpath, needs >= 0.2.4); tinyland_types
# dropped (no longer imported by src/).
bazel_dep(name = "tummycrypt_tinyland_a11y_engine", version = "0.2.4")
bazel_dep(name = "tummycrypt_tinyland_composables", version = "0.2.4")
bazel_dep(name = "tummycrypt_tinyvectors", version = "0.3.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.13.1")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "10.13.1",
)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "tummycrypt_tinyland_stores_npm",
    data = [
        "//:package.json",
        "//:pnpm-workspace.yaml",
    ],
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "tummycrypt_tinyland_stores_npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(ts_version = "5.9.3")
use_repo(rules_ts_ext, "npm_typescript")
